# twini_cuda_golf

./: CMakeLists.txt  README.md
VersionBuild/V1 Sample/: Release V1.7z
src/: level_gen.cu  level_gen.cuh  main.cpp
